fixed spacing in conflicting li_s

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -16,6 +16,6 @@
 	padding-left: 0;
 }
 
-#user_posts, li {
+.user_posts_li {
 	margin-top: 3em;
 }
