--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -14,6 +14,6 @@
 	padding-left: 0;
 }
 
-#user_posts, li {
+.user_posts_li {
 	margin-top: 3em;
 }
